css/styles.css
.spacer {
    width: 100px;
    height: 2px;
    margin: auto;
    color: #91a3b0;
}

.container-intro {
    /*margin-top: 5vh;*/
}

.h1-name {
    font-size: 6em;
}

.cs-student {
    font-size: 2em;
}

.intro-sites {
    margin-bottom: 50px;
    color: #000;
}

#intro {
    background: url("../img/background-test.png") no-repeat center fixed;
}

.vertical-center {
    min-height: 100%; /* Fallback for browsers do NOT support vh unit */
    min-height: 100vh; /* These two lines are counted as one :-)       */

    display: flex;
    width: 100vh;
    align-items: center;
}

.social-icon > a {
    padding: 5px;
    margin-right: 2px;
    margin-left: 2px;
    color: #000000;
}

.navbar-default {
    /*background-color: #FFFFFF;
    border-color: #FFFFFF;
    color: #FFFFFF;

    */

    background-color: transparent;
    border-color: transparent;

}

.navbar-default .navbar-nav > li > a {
    color: #000000;
}

.navbar-default .navbar-nav > li > a:hover,
.navbar-default .navbar-nav > li > a:focus, a:hover, a:active, .navbar-default .navbar-nav > .active > a,
.navbar-default .navbar-nav > .active > a:hover,
.navbar-default .navbar-nav > .active > a:focus {
    /*color: #3498db;*/
    background-color: transparent;
    color: #e2e2e2;
}

#contact-button {
    margin-top: 40px;
}

#contact-button > a:hover {
    background-color: #91a3b0;

}

h1 {
    font-size: 400%;
    font-family: 'Roboto', sans-serif;
}

.intro-section > p {
    padding-top: 150px;
    text-align: center;
    background: #fff;
}

.text-intro {
    text-align: left;
}

.hello-intro {
    text-align: center;
}

#contact-text {
    text-align: left;
}

.contact-section {
    margin-bottom: 100px;
}

#contact-title {
    margin-bottom: 80px;
}

.form {
    text-align: left;
}

.contact-section .button {
    margin-top: 10px;
    text-align: right;
}

.text {
    text-align: left;
}

.about-me {
    margin-bottom: 30px;
}

.education > h1 {
    margin-bottom: 40px;
}

.title-section {
    text-align: center;
    margin-bottom: 30px;
}

.navbar-text > a,
.navbar-text > p {
    color: #A9B3BB;
}

.navbar-text > a:hover {
    color: #3498db;
}

.navbar-text > p {
    font-size: 110%;
}

.navbar-inverse {
    margin-bottom: 0px;
}

.container-grey-section {
    width: 100%;
    /*height: 100%;*/
    background: #BDC3C7;
}

.container-white-section {
    width: 100%;
    /*height: 100%;*/
    background: #fff;
}

.navbar-toggle {
    float: left;
    margin-left: 15px;
}

@media (min-width: 1200px) {
    .container-grey-section {
        width: 100%;
        height: 100%;

    }

    .container-white-section {
        width: 100%;
        height: 100%;

    }

}

.margin-form {
    margin-bottom: 10px;
}

.navbar-default .navbar-nav > .active > a {
    color: #FFF;
    /*background-color: #000;*/
}

.test-vertical-center {
    position: relative;
    top: 50%;
    transform: translateY(-50%);
}

.panel-heading > h4 > a:hover {
    color: #84849c;
}

